2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Fix misplaced parens.

2005-04-06  D Goel  <deego@gnufans.org>

	* spam-stat.el (spam-stat-score-buffer): Add a call to a
	user-function allow user modifications of the scores.
	(spam-stat-score-buffer-user): New function, to allow
	user-computed modifications to the score.
	(spam-stat-score-buffer-user-functions): list of additional
	scoring functions
	(spam-stat-error-holder): global temporary error holder
	(spam-stat-split-fancy): use the new `spam-stat-error-holder'
	variable

2005-04-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-clean-empty-function)
	(gnus-registry-trim, gnus-registry-fetch-groups)
	(gnus-registry-delete-group): now groups that match
	`gnus-registry-ignored-groups' will be removed from the registry
	entries, not just ignored for splitting.  This helps clean up the
	registry.  Also, `gnus-registry-fetch-groups' is a convenient way
	to get all the groups a message ID is in.

	* spam-stat.el (spam-stat-split-fancy-spam-threshold)
	(spam-stat-split-fancy): changed "threshhold" to "threshold"
	(spam-stat-score-buffer-user-functions): added :number custom type

2005-04-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-p): Don't return binary for the nil
	argument in XEmacs.

	* nnrss.el (nnrss-compatible-encoding-alist): New variable.
	(nnrss-request-group): Decode group name first.
	(nnrss-request-article): Make a text/plain article if mml-to-mime
	failed.
	(nnrss-get-encoding): Return a compatible encoding according to
	nnrss-compatible-encoding-alist.
	(nnrss-find-el): Use consp instead of listp.
	(nnrss-opml-export, nnrss-order-hrefs, nnrss-find-el): Use dolist.

2005-04-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* time-date.el (time-to-seconds): Don't use the #xhhhh syntax
	which Emacs 20 doesn't support.
	(seconds-to-time, days-to-time, time-subtract, time-add): Ditto.
